--- a/Frontend/src/app/modules/products/components/layout/layout.component.html
+++ b/Frontend/src/app/modules/products/components/layout/layout.component.html
@@ -1,5 +1,5 @@
 <div class="text-3xl text-primary-100 font-bold drop-shadow-lg text-center uppercase">
-    <i [class]="'fa-solid ' + category.icon"></i>
+    <i [class]="category.icon"></i>
     <h2 class="ml-3" [id]="category.name">{{ category.name }}</h2>
 </div>
 
