--- a/Frontend/src/app/modules/products/components/product-card/product-card.component.html
+++ b/Frontend/src/app/modules/products/components/product-card/product-card.component.html
@@ -1,5 +1,6 @@
 <div class="flex flex-col flex-auto bg-gray-50 rounded-md w-full h-auto p-0.5 text-gray-900">
-    <img class="rounded-t-md h-36" [src]="product.image | imagePipe" />
+    <img class="rounded-t-md h-36" [src]="product.image | imagePipe"
+        [class]="canBuy ? '' : 'grayscale'" />
 
     <div class="flex flex-col p-3.5 gap-y-2">
         <div class="relative group">
@@ -20,11 +21,18 @@
         <div class="flex flex-wrap mt-2 justify-between items-center sm:flex-auto">
             <p class="text-2xl font-bold text-black">{{ product.price | currency }}</p>
             
-            <button class="flex items-center py-1.5 px-2 rounded-lg bg-primary-100 text-white hover:bg-primary hover:text-black btn-zoom"
+            <button *ngIf="canBuy; else cantBuy" class="flex items-center py-1.5 px-2 rounded-lg bg-primary-100 text-white hover:bg-primary hover:text-black btn-zoom"
                 (click)="selectedProduct()">
                 <i class="fa-solid fa-cart-plus"></i>
                 <p class="ml-3">Comprar</p>
             </button>
+
+            <ng-template #cantBuy>
+            <div class="flex items-center py-1.5 px-2 rounded-lg bg-gray-400 text-red-600">
+                <i class="fa-solid fa-store-slash"></i>
+                <p class="ml-3">Agotado</p>
+            </div>
+            </ng-template>
         </div>
     </div>
 </div>
