--- a/Frontend/src/app/modules/administration/pages/category-admin/category-admin.component.html
+++ b/Frontend/src/app/modules/administration/pages/category-admin/category-admin.component.html
@@ -1,3 +1,5 @@
+<category-form></category-form>
+
 <div class="flex justify-between items-center">
     <div class="text-3xl text-accent-100 font-bold drop-shadow-lg text-center uppercase flex justify-center items-center w-full">
         <i class="fa-solid fa-list"></i>
