--- a/Frontend/src/app/modules/products/components/product-card/product-card.component.html
+++ b/Frontend/src/app/modules/products/components/product-card/product-card.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col flex-auto bg-gray-50 rounded-md w-full h-auto p-0.5 text-gray-900">
-    <img class="rounded-t-md h-36" [src]="product.image | imagePipe" />
+    <img class="rounded-t-md h-36" [class]="canBuy ? '' : 'grayscale'" [src]="product.image | imagePipe" />
 
     <div class="flex flex-col p-3.5 gap-y-2">
         <div class="relative group">
@@ -21,10 +21,18 @@
             <p class="text-2xl font-bold text-black">{{ product.price | currency }}</p>
             
             <button class="flex items-center py-1.5 px-2 rounded-lg bg-primary-100 text-white hover:bg-primary hover:text-black btn-zoom"
-                (click)="selectedProduct()">
+                (click)="selectedProduct()"
+                *ngIf="canBuy; else cantBuy">
                 <i class="fa-solid fa-cart-plus"></i>
                 <p class="ml-3">Comprar</p>
             </button>
+            
+            <ng-template #cantBuy>
+                <div class="flex items-center py-1.5 px-2 rounded-lg bg-gray-400 text-red-800">
+                    <i class="fa-solid fa-shop-slash"></i>
+                    <p class="ml-3">Agotado</p>
+                </div>
+            </ng-template>
         </div>
     </div>
 </div>
