Add Category edit and create

--- a/Frontend/src/app/modules/administration/pages/category-admin/category-admin.component.html
+++ b/Frontend/src/app/modules/administration/pages/category-admin/category-admin.component.html
@@ -1,4 +1,5 @@
-<category-form></category-form>
+<category-form *ngIf="sidebarType === 'Create'" [sidebarType]="sidebarType"></category-form>
+<category-form *ngIf="sidebarType === 'Edit'" [sidebarType]="sidebarType" [category]="categorySelected"></category-form>
 
 <div class="flex justify-between items-center">
     <div class="text-3xl text-accent-100 font-bold drop-shadow-lg text-center uppercase flex justify-center items-center w-full">
@@ -6,12 +7,13 @@
         <h2 class="ml-3" id="categorias">Categorías</h2>
     </div>
 
-    <div class="flex justify-end items-center text-admin-primary-100 font-semibold w-auto">
+    <button class="flex justify-end items-center text-admin-primary-100 font-semibold w-auto"
+        (click)="openSidebar('Create')">
         <i class="fa-regular fa-square-plus text-2xl"></i>
         <p class="ml-2 text-xl hidden underline sm:block">Agregar</p>
-    </div>
+    </button>
 </div>
 
 <hr class="border border-warning-100 my-8" />
 
-<categories-table></categories-table>
+<categories-table (onEditCategory)="editCategory($event)"></categories-table>
