--- a/Frontend/src/app/modules/categories/components/categories-table/categories-table.component.html
+++ b/Frontend/src/app/modules/categories/components/categories-table/categories-table.component.html
@@ -16,7 +16,8 @@
                         <td>{{ item.name }}</td>
                         <td>
                             <div class="flex items-center gap-2 justify-center">
-                                <button class="p-2 rounded-full text-base text-secondary-100">
+                                <button class="p-2 rounded-full text-base text-secondary-100"
+                                    (click)="editCategory(item)">
                                     <i class="fa-solid fa-pen-to-square"></i>
                                 </button>
                                 <button class="p-2 rounded-full text-base text-error-100">
