--- a/Frontend/src/app/modules/administration/pages/schedules-admin/schedules-admin.component.html
+++ b/Frontend/src/app/modules/administration/pages/schedules-admin/schedules-admin.component.html
@@ -1,3 +1,5 @@
+<schedule-form *ngIf="sidebarType === 'Edit'" [schedule]="scheduleSelected"></schedule-form>
+
 <div class="flex justify-between items-center">
     <div class="text-3xl text-accent-100 font-bold drop-shadow-lg text-center uppercase flex justify-center items-center w-full">
         <i class="fa-solid fa-clock"></i>
@@ -7,4 +9,4 @@
 
 <hr class="border border-warning-100 my-8" />
 
-<schedule-table></schedule-table>
+<schedule-table (onEditSchedule)="openSidebar($event)"></schedule-table>
