Add Update General Information

--- a/Frontend/src/app/modules/administration/pages/information-admin/information-admin.component.html
+++ b/Frontend/src/app/modules/administration/pages/information-admin/information-admin.component.html
@@ -1,1 +1,8 @@
-<p>information-admin works!</p>
+<div class="flex justify-between items-center">
+    <div class="text-3xl text-accent-100 font-bold drop-shadow-lg text-center uppercase flex justify-center items-center w-full">
+        <i class="fa-circle-info fa-solid"></i>
+        <h2 class="ml-3">Información</h2>
+    </div>
+</div>
+
+<hr class="border border-warning-100 my-8" />
