--- a/Frontend/src/app/modules/administration/administration.component.html
+++ b/Frontend/src/app/modules/administration/administration.component.html
@@ -1,8 +1,8 @@
 <div class="flex flex-col md:h-screen md:flex-row bg-admin-background">
-    <shared-admin-sidebar></shared-admin-sidebar>
+    <shared-admin-sidebar (onInformationSidebar)="openSidebar()"></shared-admin-sidebar>
 
     <div class="md:flex-1 md:overflow-y-auto p-6 scroll-smooth">
+        <admin-information-sidebar *ngIf="sidebarType === 'Info'"></admin-information-sidebar>
         <router-outlet></router-outlet>
     </div>
-
 </div>
