--- a/Frontend/src/app/modules/cart/pages/order-details-page/order-details-page.component.html
+++ b/Frontend/src/app/modules/cart/pages/order-details-page/order-details-page.component.html
@@ -76,9 +76,9 @@
         <div class="flex flex-col items-center gap-y-1" *ngIf="form.get('paymentMethod')?.value === 'transferencia'">
             <label class="font-bold">Datos de transferencia</label>
 
-            <p><span class="font-semibold">Nombre:</span> {{ transferData.name }}</p>
-            <p><span class="font-semibold">Clabe:</span> {{ transferData.clabe }}</p>
-            <p><span class="font-semibold">Banco:</span> {{ transferData.bankName }}</p>
+            <p><span class="font-semibold">Nombre:</span> {{ information.ownerName }}</p>
+            <p><span class="font-semibold">Clabe:</span> {{ information.clabe }}</p>
+            <p><span class="font-semibold">Banco:</span> {{ information.bankName }}</p>
             <button class="mt-2 rounded-md border border-primary-100 text-primary-100 flex justify-center items-centers p-1.5 hover:bg-primary-100 hover:text-white"
                 (click)="copyClabe()">
                 <i class="fa-regular fa-copy"></i>
