Add delete and SweetAlert2

--- a/Frontend/src/app/modules/categories/components/categories-table/categories-table.component.html
+++ b/Frontend/src/app/modules/categories/components/categories-table/categories-table.component.html
@@ -20,7 +20,8 @@
                                     (click)="editCategory(item)">
                                     <i class="fa-solid fa-pen-to-square"></i>
                                 </button>
-                                <button class="p-2 rounded-full text-base text-error-100">
+                                <button class="p-2 rounded-full text-base text-error-100"
+                                    (click)="deleteCategory(item)">
                                     <i class="fa-solid fa-trash"></i>
                                 </button>
                             </div>
