--- a/Frontend/src/app/modules/products/components/product-table/product-table.component.html
+++ b/Frontend/src/app/modules/products/components/product-table/product-table.component.html
@@ -26,7 +26,8 @@
                                     (click)="editProduct(item)">
                                     <i class="fa-solid fa-pen-to-square"></i>
                                 </button>
-                                <button class="p-2 rounded-full text-base text-error-100">
+                                <button class="p-2 rounded-full text-base text-error-100"
+                                    (click)="deleteProduct(item)">
                                     <i class="fa-solid fa-trash"></i>
                                 </button>
                             </div>
